Provide a tweet service to manage storage and loading of tweets.
relates to https://app.asana.com/0/26972833233740/27003529634416

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 
 <div class="col-md-4">
 
-<button class="btn btn-success">Load More</button>
+<button class="btn btn-success" ng-click="loadMoreTweets()">Load More</button>
 </div>
 <div class="col-md-8">
   <div class="well" ng-repeat="tweet in tweets">
