--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,14 +1,28 @@
 
 <div class="col-md-4">
-
-<button class="btn btn-success" ng-click="loadMoreTweets()">Load More</button>
+  <section id="buttons">
+      <button class="btn btn-success" ng-click="loadMoreTweets()">Fetch more messages</button>
+  </section>
+  <section id="messages">
+      <div ng-if="lastError" class="alert alert-danger">
+        Error Loading: <br>
+        <strong>{{lastError}}</strong>
+      </div>
+  </section>
 </div>
+
 <div class="col-md-8">
   <div class="well" ng-repeat="tweet in tweets | orderBy:['-sentiment', '-created_at']">
   <!-- <pre>{{tweet | json}}</pre> -->
-    <h4>{{tweet.user_handle}} <small>{{tweet.created_at | date:'short'}}</small></h4> 
-    <strong class="pull-right">{{tweet.sentiment}}</strong>
+    <h4>{{tweet.user_handle}}
+      <small>{{tweet.created_at | date:'short'}}</small>
+      <small title="this tweet was loaded {{tweet.count}} times.">Count {{tweet.count}}</samm>
+    </h4> 
+    <strong class="pull-right">Sentiment {{tweet.sentiment}}</strong>
     <div class="tweettext">{{tweet.message}}</div>
+  </div>
+  <div ng-if="tweets.length == 0">
+    <h2>Gah! No tweets <small>load some</small></h2>
   </div>
 </div>
 
