--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,12 @@
 <div class="col-xs-4">
   <section id="buttons">
     <div class="well">
-      <button class="btn btn-success" ng-click="loadMoreTweets()">Fetch more messages <i ng-if="loading" class="glyphicon glyphicon-time"></i></button>
+      <button class="btn btn-success" ng-click="loadMoreTweets()">Fetch more messages <i ng-if="loading" class="glyphicon glyphicon-time"></i>
+      </button>
+      <br>
+      <br>
+      <button ng-if="tweets.length > 0" class="btn btn-defalt btn-sm" ng-click="toggleShowRaw()">toggle raw tweet data</button>
+
     </div>  
   </section>
 
@@ -16,7 +21,6 @@
   </section>
 
   <section id="filters">
-
     <div class="well" ng-if="userHandleFilter">
       <p>Showing messages from</p>
       <strong>{{userHandleFilter}}</strong>
@@ -47,3 +51,7 @@
 </div>
 
 <div class="clearfix"></div>
+<div ng-if="showRaw" class="col-md-12">
+  <h1>Raw Tweet data </h1>
+  <pre>{{getTweets() | json}}</pre>
+</div>
